--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "chokidar": "^3.5.3",
+    "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "prop": "^0.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "types": "^0.1.1",
     "web-vitals": "^1.1.2"
   },
