--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chokidar": "^3.5.3",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
+    "json-server": "^0.17.4",
     "prop": "^0.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
